--- a/Image_filtering.ipynb
+++ b/Image_filtering.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmGohcKuV1+Lxxm8myMT7H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +27,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "ZFympzhzH-8S"
+        "id": "ZFympzhzH-8S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1ebb275a-d780-4dd4-aded-ab1620b6c7d2"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"hello\")"
+      ]
     }
   ]
 }
