--- a/Image_filtering.ipynb
+++ b/Image_filtering.ipynb
@@ -27,25 +27,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "ZFympzhzH-8S",
+        "outputId": "0ccc3eb7-0643-496c-8c5b-b9d51d9a5d52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1ebb275a-d780-4dd4-aded-ab1620b6c7d2"
+        }
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello\n"
+            "ka hal chal baa jii \n"
           ]
         }
       ],
       "source": [
-        "print(\"hello\")"
+        "print(\"ka hal chal baa jii \")"
       ]
     }
   ]
