--- a/cvPractice.ipynb
+++ b/cvPractice.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyaKqoSI/qV/g19lIAlDPH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +71,8 @@
         "plt.axis(\"on\")\n",
         "\n",
         "plt.tight_layout()\n",
-        "plt.show()"
+        "plt.show()\n",
+        "print(\"hello\")"
       ]
     }
   ]
